19008
```scala

class C {
  def test {
    reflect.runtime.universe.typeOf[_67.u.TermName forSome { val _67: AnyRef{val u: reflect.runtime.universe.type} }]
  }
}

class D {
  def test: _root_.scala.Unit = {
    _root_.scala.reflect.runtime.`package`.universe.typeOf[(_67.u.TermName forSome {
      val _67: (AnyRef {
        val u: reflect.runtime.universe.type
      })
    })](({
      val $u: _root_.scala.reflect.runtime.`package`.universe.type = _root_.scala.reflect.runtime.`package`.universe;
      val $m: $u.Mirror = _root_.scala.reflect.runtime.`package`.universe.runtimeMirror(classOf[C].getClassLoader());
      $u.TypeTag.apply($m, {
        final class $typecreator1 extends scala.reflect.api.TypeCreator {
          def apply[U <: scala.reflect.api.Universe with scala.Singleton]($m$untyped: scala.reflect.api.Mirror[U]): (U)#Type = {
            val $u: U = $m$untyped.universe;
            val $m: $u.Mirror = $m$untyped.asInstanceOf[$u.Mirror];
            val symdef$_67$type1 = $u.internal.reificationSupport.newNestedSymbol($u.internal.reificationSupport.selectTerm($m.staticClass("C"), "test"), $u.TypeName.apply("_67.type"), $u.NoPosition, $u.internal.reificationSupport.FlagsRepr.apply(34359738384L), false);
            val free$u1 = $u.internal.reificationSupport.newFreeTerm("u", u, $u.internal.reificationSupport.FlagsRepr.apply(17592324456528L), "defined by <refinement> in test.scala:4:82");
            val `symdef$<refinement>1` = $u.internal.reificationSupport.newNestedSymbol($m.staticPackage("scala").asModule.moduleClass, $u.TypeName.apply("<refinement>"), $u.NoPosition, $u.internal.reificationSupport.FlagsRepr.apply(0L), true);
            val `symdef$<refinement>2` = $u.internal.reificationSupport.newNestedSymbol($m.staticClass("C"), $u.TypeName.apply("<refinement>"), $u.NoPosition, $u.internal.reificationSupport.FlagsRepr.apply(0L), true);
            $u.internal.reificationSupport.setInfo(symdef$_67$type1, $u.internal.reificationSupport.TypeBounds($m.staticClass("scala.Nothing").asType.toTypeConstructor, $u.internal.reificationSupport.RefinedType(_root_.scala.collection.immutable.List.apply($u.internal.reificationSupport.RefinedType(_root_.scala.collection.immutable.List.apply($u.internal.reificationSupport.TypeRef($u.internal.reificationSupport.ThisType($m.staticPackage("scala").asModule.moduleClass), $u.internal.reificationSupport.selectType($m.staticPackage("scala").asModule.moduleClass, "AnyRef"), _root_.scala.collection.immutable.Nil)), $u.internal.reificationSupport.newScopeWith(free$u1), `symdef$<refinement>2`), $m.staticClass("scala.Singleton").asType.toTypeConstructor), $u.internal.reificationSupport.newScopeWith(), `symdef$<refinement>1`)));
            $u.internal.reificationSupport.setInfo(free$u1, $u.internal.reificationSupport.NullaryMethodType($u.internal.reificationSupport.SingleType($u.internal.reificationSupport.SingleType($u.internal.reificationSupport.SingleType($u.internal.reificationSupport.SingleType($u.internal.reificationSupport.ThisType($m.staticPackage("scala").asModule.moduleClass), $m.staticPackage("scala.reflect")), $m.staticPackage("scala.reflect.runtime")), $m.staticModule("scala.reflect.runtime.package")), $u.internal.reificationSupport.selectTerm($m.staticModule("scala.reflect.runtime.package").asModule.moduleClass, "universe"))));
            $u.internal.reificationSupport.setInfo(`symdef$<refinement>1`, $u.internal.reificationSupport.RefinedType(_root_.scala.collection.immutable.List.apply($u.internal.reificationSupport.RefinedType(_root_.scala.collection.immutable.List.apply($u.internal.reificationSupport.TypeRef($u.internal.reificationSupport.ThisType($m.staticPackage("scala").asModule.moduleClass), $u.internal.reificationSupport.selectType($m.staticPackage("scala").asModule.moduleClass, "AnyRef"), _root_.scala.collection.immutable.Nil)), $u.internal.reificationSupport.newScopeWith(free$u1), `symdef$<refinement>2`), $m.staticClass("scala.Singleton").asType.toTypeConstructor), $u.internal.reificationSupport.newScopeWith(), `symdef$<refinement>1`));
            $u.internal.reificationSupport.setInfo(`symdef$<refinement>2`, $u.internal.reificationSupport.RefinedType(_root_.scala.collection.immutable.List.apply($u.internal.reificationSupport.TypeRef($u.internal.reificationSupport.ThisType($m.staticPackage("scala").asModule.moduleClass), $u.internal.reificationSupport.selectType($m.staticPackage("scala").asModule.moduleClass, "AnyRef"), _root_.scala.collection.immutable.Nil)), $u.internal.reificationSupport.newScopeWith(free$u1), `symdef$<refinement>2`));
            $u.internal.reificationSupport.ExistentialType(_root_.scala.collection.immutable.List.apply(symdef$_67$type1), $u.internal.reificationSupport.TypeRef($u.internal.reificationSupport.SingleType($u.internal.reificationSupport.TypeRef($u.NoPrefix, symdef$_67$type1, _root_.scala.collection.immutable.Nil), free$u1), $u.internal.reificationSupport.selectType($m.staticClass("scala.reflect.api.Names"), "TermName"), _root_.scala.collection.immutable.Nil))
          }
        };
        new $typecreator1()
      })
    }));
    ()
  }
}
```

`class C` crashes in the backend with 
```
error: scala.MatchError: u (of class scala.reflect.internal.Trees$Ident)
	at scala.tools.nsc.transform.Erasure$ErasureTransformer$$anon$1.qualifier$1(Erasure.scala:847)
```

`class D`, which is the expansion of the `typeOf` macro, fails to typecheck with:
```
sandbox/test.scala:23: error: not found: value u
            val free$u1 = $u.internal.reificationSupport.newFreeTerm("u", u, $u.internal.reificationSupport.FlagsRepr.apply(17592324456528L), "defined by <refinement> in test.scala:4:82");
                                                                          ^
one error found
```
